Mon Nov 15 19:02:07 2004  Manish Singh  <yosh@gimp.org>

	* gdk/abicheck.sh
	* gtk/abicheck.sh: don't hardcode lengths for cut, instead split on
	the third field.

2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkselection.c: Reduce the clipboard timeout from 300
	seconds to 30 seconds.  (#155428, Billy Biggs)

	* gtk/gtkimagemenuitem.c (gtk_image_menu_item_setting_changed): 
	* gtk/gtkbutton.c (gtk_button_setting_changed): Really free the
	list.  (#158422, Morten Welinder)

2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimagemenuitem.c (gtk_image_menu_item_screen_changed) 
	* gtk/gtkbutton.c (gtk_button_screen_changed): Use 
	GPOINTER_TO_UINT()/GUINT_TO_POINTER() for guints.  (#158420,
	Morten Welinder)

Mon Nov 15 17:17:17 2004  Manish Singh  <yosh@gimp.org>

	* configure.in: Output Makefile for the pixbuf engine directory.

	* gtk/gtk.symbols: Add gtk_button_{get,set}_image.

	* modules/engines/pixbuf/pixbuf-render.c: Replace usage of deprecated
	functions.

	* modules/engines/pixbuf/pixbuf-draw.c: undef GDK_DISABLE_DEPRECATED
	for gdk_draw_string (ick).

2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkbutton.[hc]: Add a GtkButton::image property with setter 
	and getter, which allows to construct stock-like buttons with 
	custom images and/or text.  (#62466, Jonathan Blandford, patch by
	Matthias Clasen)

	* gtk/gtkimagemenuitem.c (gtk_image_menu_item_set_image): Add 
	some more docs.

Mon Nov 15 14:25:21 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeviewcolumn.c (_gtk_tree_view_column_cell_set_dirty):
	Patch from Gavin Romig-Koch <gavin@redhat.com> to no longer reset
	the resized_width when marking a column dirty.

2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* modules/engines/Makefile.am (SUBDIRS): Add pixbuf.

	* gtk/gtkbutton.c: 
	* gtk/gtkimagemenuitem.c: Don't use one signal handler per
	instance to track changes to the gtk-menu-images and